# src/types/openapi/openapi-full.ts
@@ -16624,6 +16624,13 @@ export interface operations {
                      * @default false
                      */
                     removeServiceAccount?: boolean;
+                    /**
+                     * @description Whether to transcribe recordings per participant track
+                     * @default false
+                     */
+                    multitrackEnabled?: boolean;
+                    /** @description Gemini Transcribe model to transcribe participant tracks */
+                    transcriptionModel?: string;
                 };
             };
         };
